New gemstone (#2)
* add raw ruby

* Add raw ruby to condition

* Complete Condition

* Add Ruby