@@ -16,7 +16,9 @@ public class ModItems {
     public static final DeferredRegister<Item> ITEMS = DeferredRegister.create(ForgeRegistries.ITEMS, RavenMagical.MOD_ID);
 
     public static final RegistryObject<RavenItem> CITRINE = ITEMS.register(Citrine.CODE_NAME, Citrine::new);
-    public static final RegistryObject<RavenItem> RAW_CITRINE = ITEMS.register(RawCitrine.CODE_NAME, RawCitrine::new);
+    public static final RegistryObject<RawGemstoneItem> RAW_CITRINE = ITEMS.register(RawCitrine.CODE_NAME, RawCitrine::new);
+    public static final RegistryObject<RawGemstoneItem> RAW_RUBY = ITEMS.register(RawRuby.CODE_NAME, RawRuby::new);
+    public static final RegistryObject<RavenItem> RUBY = ITEMS.register(Ruby.CODE_NAME, Ruby::new);
 
     public static void register(final IEventBus eventBus) {
         ITEMS.register(eventBus);
@@ -28,6 +30,10 @@ public class ModItems {
     }
 
     public static List<RavenItem> getGeneratedItems() {
-        return Arrays.asList(CITRINE.get(), RAW_CITRINE.get());
+        return getItems(getRawGemstones(), CITRINE.stream().toList(), RUBY.stream().toList());
+    }
+
+    public static List<RavenItem> getRawGemstones() {
+        return List.of(RAW_CITRINE.get(), RAW_RUBY.get());
     }
 }
